syntax = "proto3";
package pb;
option go_package = "internal/pb";

message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

message EmptyRequest {}

message CreateCategoryRequest {
    string name = 1;
    string description = 2;
}

message CategoryGetRequest {
    string id = 1;
}

message CategoryResponse {
    Category category = 1;
}

message CategoryListResponse {
    repeated CategoryResponse categories = 1;
}

service CategoryService {
    rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse) {}
    rpc ListCategories(EmptyRequest) returns (CategoryListResponse) {}
    rpc GetCategory(CategoryGetRequest) returns (CategoryResponse) {}
    rpc CreateCategoryStream(stream CreateCategoryRequest) returns (CategoryListResponse) {}
    rpc CreateCategoryStreamBidirectional(stream CreateCategoryRequest) returns (stream CategoryResponse) {}
}
